<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.program_1.MainActivity" >

<TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/example"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/textView_title"
        android:layout_below="@+id/textView_title"
        android:layout_marginTop="7dp"
        android:text="@string/text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editText_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_text"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/editText_text"
        android:padding="5dp"
        android:scrollbars="horizontal"
        android:shadowColor="#3EB1FE"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_yn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_text"
        android:layout_below="@+id/editText_text"
        android:layout_marginTop="11dp"
        android:text="@string/yn"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <RadioGroup
        android:id="@+id/radioGroup_yn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_yn"
        android:layout_below="@+id/textView_yn" >

        <RadioButton
            android:id="@+id/r_sex1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/r_sex2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/radioGroup_yn"
        android:layout_below="@+id/radioGroup_yn"
        android:layout_marginTop="9dp"
        android:text="@string/rating"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_rating"
        android:layout_below="@+id/textView_rating" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/ratingBar"
        android:layout_alignTop="@+id/ratingBar"
        android:layout_marginTop="48dp"
        android:text="@string/ok" 
        android:onClick="clickListener"/>


</RelativeLayout>
